# DPtoolkit

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  Differential_Privacy_Toolkit_PRD.docx  Differential_Privacy_Toolkit_PRD.md  LICENSE  README.md  SESSION_LOG.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: settings.json  settings.md
.claude/commands/: check-coverage.md  lint.md  next-step.md  profile-perf.md  review.md  test.md  verify-dp.md
docs/: api.md  deployment.md
dp_toolkit/: __init__.py
dp_toolkit/analysis/: __init__.py  comparator.py  divergence.py  visualizer.py
dp_toolkit/core/: __init__.py  budget.py  mechanisms.py
dp_toolkit/data/: __init__.py  exporter.py  loader.py  profiler.py  transformer.py
dp_toolkit/recommendations/: __init__.py  advisor.py  classifier.py
dp_toolkit/reports/: __init__.py  pdf_generator.py
examples/: basic_usage.ipynb
frontend/: __init__.py  app.py
frontend/pages/: __init__.py  analyze.py  configure.py  export.py  upload.py
frontend/utils/: config.py  session.py  ui_components.py
tests/: __init__.py  conftest.py
tests/data/: sample_healthcare.csv
tests/integration/: __init__.py  test_end_to_end.py
tests/unit/: __init__.py  test_advisor.py  test_budget.py  test_classifier.py  test_comparator.py  test_divergence.py  test_exporter.py  test_loader.py  test_loader_formats.py  test_mechanisms.py  test_pdf_generator.py  test_profiler.py  test_profiler_categorical.py  test_profiler_dataset.py  test_profiler_date.py  test_profiler_unified.py  test_transformer.py  test_visualizer.py
