[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-toolkit"
version = "0.1.0"
description = "Differential Privacy Toolkit for healthcare datasets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "DPtoolkit Team"}
]
keywords = ["differential-privacy", "healthcare", "privacy", "data-protection", "GDPR", "HIPAA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "opendp>=0.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "streamlit>=1.28",
    "plotly>=5.15",
    "matplotlib>=3.7",
    "reportlab>=4.0",
    "openpyxl>=3.1",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "black>=23.9",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/DPtoolkit"
Repository = "https://github.com/yourusername/DPtoolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["dp_toolkit*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | build
    | dist
)/
'''

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]
